jupyter notebook version
uploading so can test locally when colab gpu not available

--- a/iCAD_Dental_Coding_Test.ipynb
+++ b/iCAD_Dental_Coding_Test.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/HumzaW245/iCAD-Dental/blob/main/iCAD_Dental_Coding_Test.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "djaAjDFIQ0K3"
       },
       "source": [
@@ -633,9 +623,7 @@
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyPKdWaaw7eVc/ySI70O9Bho",
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
