--- a/iCAD_Dental_Coding_Test_Colab_BinaryClassification.ipynb
+++ b/iCAD_Dental_Coding_Test_Colab_BinaryClassification.ipynb
@@ -879,7 +879,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# SHAP to explain model's decisions (see: https://shap.readthedocs.io/en/latest/example_notebooks/image_examples/image_classification/Explain%20ResNet50%20using%20the%20Partition%20explainer.html)"
+        "# SHAP to explain model's decisions"
       ],
       "metadata": {
         "id": "zXcq-ABgOvOr"
@@ -1077,21 +1077,21 @@
         "#download the plot\n",
         "files.download('shap_top_features_explained.png')\n",
         "\n",
-        "print(\"The shap plot shows the top 4 features (or in this case, pixel arrangements) that impact the prediction accuracy of there being a tumour or not.\\\n",
-        "      The blue pixels represent low SHAP values which suggest that the presence of these pixels lowers the predicitability for the model. The more intense the blue\\\n",
-        "      (more negative SHAP value), means more significant influence and so those pixels make predictions worse compared to 'less blue' ones.\\\n",
-        "      The red pixels represent positive shap values and these are what the model uses best to predict correctly the presence of tumours. Similarly, \\\n",
+        "print(\"\\nThe shap plot shows the top 4 features (or in this case, pixel arrangements) that impact the prediction accuracy of there being a tumour or not.\\n\\\n",
+        "      The blue pixels represent low SHAP values which suggest that the presence of these pixels lowers the predicitability for the model. The more intense the blue\\n\\\n",
+        "      (more negative SHAP value), means more significant influence and so those pixels make predictions worse compared to 'less blue' ones.\\n\\\n",
+        "      The red pixels represent positive shap values and these are what the model uses best to predict correctly the presence of tumours. Similarly, \\n\\\n",
         "      the more red (more positive SHAP value) means the pixel is more important in making a correct prediction. \")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 72
+          "height": 138
         },
         "id": "jIKz7Sv7n1mu",
-        "outputId": "af9a0caf-7a87-4a5d-b1c8-1d6c176649ca"
+        "outputId": "9d0ee765-ee10-4b43-dd64-a9ea6ba45d5a"
       },
-      "execution_count": 97,
+      "execution_count": 99,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1152,7 +1152,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_93dc13a3-22e6-46dd-b554-7f5bf86978fc\", \"shap_top_features_explained.png\", 2396)"
+              "download(\"download_f4ae7e5a-ddc6-42ec-b116-db819cbea70b\", \"shap_top_features_explained.png\", 2396)"
             ]
           },
           "metadata": {}
@@ -1161,7 +1161,12 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "The shap plot shows the top 4 features (or in this case, pixel arrangements) that impact the prediction accuracy of there being a tumour or not.      The blue pixels represent low SHAP values which suggest that the presence of these pixels lowers the predicitability for the model. The more intense the blue      (more negative SHAP value), means more significant influence and so those pixels make predictions worse compared to 'less blue' ones.      The red pixels represent positive shap values and these are what the model uses best to predict correctly the presence of tumours. Similarly,       the more red (more positive SHAP value) means the pixel is more important in making a correct prediction. \n"
+            "\n",
+            "The shap plot shows the top 4 features (or in this case, pixel arrangements) that impact the prediction accuracy of there being a tumour or not.\n",
+            "      The blue pixels represent low SHAP values which suggest that the presence of these pixels lowers the predicitability for the model. The more intense the blue\n",
+            "      (more negative SHAP value), means more significant influence and so those pixels make predictions worse compared to 'less blue' ones.\n",
+            "      The red pixels represent positive shap values and these are what the model uses best to predict correctly the presence of tumours. Similarly, \n",
+            "      the more red (more positive SHAP value) means the pixel is more important in making a correct prediction. \n"
           ]
         },
         {
@@ -1174,6 +1179,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "cOwTJP_73F1j"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
