--- a/iCAD_Dental_Coding_Test_Colab_BinaryClassification.ipynb
+++ b/iCAD_Dental_Coding_Test_Colab_BinaryClassification.ipynb
@@ -290,7 +290,7 @@
         "id": "lfY6nyO9BWFd"
       },
       "source": [
-        "# DataLoaders and Transformations *************CHECK TRANSF THAT SHOULD BE APPLIED...maybe some standard one"
+        "# DataLoaders and Transformations"
       ]
     },
     {
